# my-projects

./: readme.md
boundsoft/: .gitignore  deploy.py  manage.py  readme.md  requirements.txt
boundsoft/boundsoft/: settings_development.py  settings_production.py  urls.py  views.py  wsgi.py
boundsoft/home/: admin.py  models.py
boundsoft/react_project/: package-lock.json  package.json
cryptotrader/: readme.md
cryptotrader/finalproject/: settings.py  urls.py
cryptotrader/main/: admin.py  models.py  views.py
cryptotrader/stuff/: database.py  populate_database.py  populate_stocks.py  rnn-network-original.py  rnn-network.py  utility.py
cryptotrader/templates/: about.html  custom.html  customD3.html  home.html  login.html  neuralnetwork.html
desktop-exp-game/: README.md  package-lock.json
flagdigger/: .gitignore  package-lock.json  package.json  readme.md  server.js
flagdigger/rust_gameserver/: Cargo.toml  clippy.toml
flagdigger/rust_gameserver/bs_box2d/: Cargo.toml
flagdigger/rust_gameserver/bs_box2d/src/: body.rs  fixture.rs  lib.rs  world.rs
flagdigger/rust_gameserver/bs_macros/: Cargo.toml
flagdigger/rust_gameserver/bs_macros/src/: lib.rs
flagdigger/rust_gameserver/src/: data.rs  events.rs  main.rs  render.rs  room.rs  socket.rs
flagdigger/rust_gameserver/src/world/: dirt.rs  mod.rs  player.rs  projectiles.rs  utils.rs
meldchat/: .gitignore  README.md  mix.exs
meldchat/config/: dev.exs  (+4 more)
shiftblocker/: .gitignore  readme.md
twitsent/: .gitignore  Readme  api_twitter.py  build_model.py  manage.py  ml_business.py  requirements.txt  utils.py
(+205 files in other folders)
